--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.1.5",
-    "puppeteer": "^24.36.0"
+    "html-pdf-node": "^1.0.8",
+    "mongoose": "^9.1.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
